@@ -1,3 +1,9 @@
+Mon Dec  6 21:34:29 EET 1999  Vadim Chekan  <vadim@etc.lviv.ua>
+
+	* htdig/Document.cc htdig/htdig.cc: "authorization" parameter
+	in config is added and is new config compatible.
+	New code has'n got PR#490 bug (don't authentificate robot.txt)
+
 Sat Dec  4 23:49:18 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>
 
 	* htfuzzy/Synonym.cc (createDB): Change declaration to match
